# puyo30

./: .pre-commit-config.yaml  cli.py  cli.sh  pyproject.toml
src/: prob.py
src/win_prob/: __init__.py  prob.py
