[project]
name = "win-prob"
version = "0.1.0"
description = "ぷよぷよ 30 本先取の勝率を計算します。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.ruff]
# Group violations by containing file.
output-format = "grouped"
# Allow lines to be as long as 100.
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # [[conflicted]]
    "ISC001",  # [[conflicted]]
    "D415",    # Period
]

[tool.ruff.lint.pydocstyle]
convention = "google"
